--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^18.0.1",
     "playwright-core": "^1.54.2",
+    "sass": "^1.90.0",
     "vitest": "^3.2.4"
   }
 }
