--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@nuxt/image": "^1.11.0",
     "nuxt": "^3.18.1",
+    "uuid": "^11.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.19.2",
     "@vue/test-utils": "^2.4.6",
+    "autoprefixer": "^10.4.21",
     "happy-dom": "^18.0.1",
     "playwright-core": "^1.54.2",
+    "postcss": "^8.5.6",
     "sass": "^1.90.0",
+    "tailwindcss": "^3.4.17",
     "vitest": "^3.2.4"
   }
 }
