--- a/package.json
+++ b/package.json
@@ -18,11 +18,19 @@
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.19.2",
+    "@types/node": "^24.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.40.0",
+    "@typescript-eslint/parser": "^8.40.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.34.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-vue": "^10.4.0",
     "happy-dom": "^18.0.1",
     "playwright-core": "^1.54.2",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "sass": "^1.90.0",
     "tailwindcss": "^3.4.17",
     "vitest": "^3.2.4"
