--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.sideBar.location": "right",
-  "workbench.colorTheme": "Vue Theme",
+  "workbench.colorTheme": "Jellyfish",
   "workbench.iconTheme": "helium-icon-theme",
   "terminal.integrated.fontFamily": "CaskaydiaCove Nerd Font",
   "terminal.integrated.fontSize": 17,
