--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.6.3",
     "@nuxt/image": "^1.11.0",
-    "nuxt": "^3.18.1",
+    "@nuxtjs/mdc": "^0.17.2",
+    "better-sqlite3": "^12.2.0",
     "uuid": "^11.1.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^1.9.0",
     "@nuxt/test-utils": "^3.19.2",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
