--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^3.6.3",
+    "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
-    "@nuxtjs/mdc": "^0.17.2",
-    "better-sqlite3": "^12.2.0",
-    "uuid": "^11.1.0",
-    "vue": "^3.5.18",
+    "@nuxt/scripts": "^0.11.13",
+    "@unhead/vue": "^2.0.14",
+    "eslint": "^9.34.0",
+    "nuxt": "^3.18.1",
+    "typescript": "^5.9.2",
+    "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@nuxt/eslint-config": "^1.9.0",
     "@nuxt/test-utils": "^3.19.2",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
