--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "extends": "./.nuxt/tsconfig.json",
+  "module": "esnext",
+  "target": "esnext",
+  "moduleResolution": "node",
   "compilerOptions": {
     "baseUrl": ".",
     "strict": true,
     "types": [
-      "@nuxt/content"
+      "@types/node",
     ],
     "paths": {
       "@/*": [
@@ -15,9 +18,6 @@
       ],
       "@assets/*": [
         "./assets/*"
-      ],
-      "#content": [
-        "./.nuxt/content/index.d.ts"
       ]
     }
   },
