--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@unhead/vue": "^2.0.14",
     "eslint": "^9.34.0",
     "nuxt": "^3.18.1",
-    "typescript": "^5.9.2",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
@@ -37,6 +36,8 @@
     "prettier": "^3.6.2",
     "sass": "^1.90.0",
     "tailwindcss": "^3.4.17",
-    "vitest": "^3.2.4"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4",
+    "vue-tsc": "^3.0.6"
   }
 }
