code format settings updated

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,8 +6,6 @@
   "insertPragma": false,
   "singleAttributePerLine": false,
   "bracketSameLine": false,
-  "jsxBracketSameLine": false,
-  "jsxSingleQuote": false,
   "printWidth": 80,
   "proseWrap": "preserve",
   "quoteProps": "as-needed",
@@ -22,13 +20,7 @@
   "experimentalTernaries": false,
   "htmlSelfClosingStyle": "never",
   "overrides": [
-    {
-      "files": "*.vue",
-      "options": { "parser": "vue" }
-    },
-    {
-      "files": "*.ts",
-      "options": { "parser": "typescript" }
-    }
+    { "files": "*.vue", "options": { "parser": "vue" } },
+    { "files": "*.ts", "options": { "parser": "typescript" } }
   ]
 }
