--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.11.13",
     "@nuxt/test-utils": "^3.19.2",
+    "@nuxtjs/i18n": "^10.0.6",
     "@nuxtjs/mdc": "^0.17.2",
     "@unhead/vue": "^2.0.14",
     "nuxt": "^4.0.3",
