--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxt/content": "^2.7.2",
+    "@nuxt/content": "^3.6.3",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.11.13",
@@ -18,6 +18,7 @@
     "@nuxtjs/i18n": "^10.0.6",
     "@nuxtjs/mdc": "^0.17.2",
     "@unhead/vue": "^2.0.14",
+    "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.3",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
