--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxtjs/i18n": "^10.0.6",
     "@nuxtjs/mdc": "^0.17.2",
     "@unhead/vue": "^2.0.14",
+    "axios": "^1.11.0",
     "better-sqlite3": "^12.2.0",
     "nuxt": "^4.0.3",
     "vue": "^3.5.20",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/mdi": "^1.2.3",
+    "@nuxt/devtools": "^2.6.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/node": "^24.3.0",
