--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
+    "@sidebase/nuxt-auth": "^1.0.2",
     "@unhead/vue": "^2.0.14",
     "better-sqlite3": "^12.2.0",
-    "nuxt": "^4.0.3",
-    "pinia": "^3.0.3",
+    "nuxt": "^4.1.0",
+    "openai": "^5.19.1",
+    "telegram": "^2.26.22",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
