fetch data updated for vercel

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,9 @@
     "types": [
       "@types/node"
     ],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "references": [
     {
