--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@pinia/nuxt": "^0.11.2",
     "@sidebase/nuxt-auth": "^1.0.2",
     "@unhead/vue": "^2.0.14",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.2.0",
     "nuxt": "^4.1.0",
     "openai": "^5.19.1",
