--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nuxt/devtools": "^2.6.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
