--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "nuxt build",
+    "build": "npm prisma generate --no-engine && nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -17,13 +17,21 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
+    "@prisma/client": "^6.15.0",
+    "@prisma/extension-accelerate": "^2.0.2",
+    "@prisma/nuxt": "^0.3.0",
     "@sidebase/nuxt-auth": "^1.0.2",
     "@unhead/vue": "^2.0.14",
+    "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
-    "better-sqlite3": "^12.2.0",
     "nuxt": "^4.1.0",
+    "nuxt-jsonapi": "^3.0.0",
+    "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
+    "postgres": "^3.4.7",
+    "prisma": "^6.15.0",
     "telegram": "^2.26.22",
+    "v-gsap-nuxt": "^1.4.4",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
@@ -44,6 +52,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.4.0",
     "happy-dom": "^18.0.1",
+    "nuxt-svg-sprite-icon": "^2.0.1",
     "playwright-core": "^1.54.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
