--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "npm prisma generate --no-engine && nuxt build",
+    "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
@@ -25,7 +25,6 @@
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "nuxt": "^4.1.0",
-    "nuxt-jsonapi": "^3.0.0",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
     "postgres": "^3.4.7",
