--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@nuxt/content": "^3.6.3",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
@@ -17,18 +18,15 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
-    "@prisma/client": "^6.15.0",
-    "@prisma/extension-accelerate": "^2.0.2",
-    "@prisma/nuxt": "^0.3.0",
     "@sidebase/nuxt-auth": "^1.0.2",
     "@unhead/vue": "^2.0.14",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "better-sqlite3": "^12.2.0",
+    "next-auth": "^4.21.1",
     "nuxt": "^4.1.0",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
-    "postgres": "^3.4.7",
-    "prisma": "^6.15.0",
     "telegram": "^2.26.22",
     "v-gsap-nuxt": "^1.4.4",
     "vue": "^3.5.20",
@@ -41,6 +39,7 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
