--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,32 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "~/*": [
-        "app/*"
-      ],
       "@/*": [
         "app/*"
+      ],
+      "@content/*": [
+        "content/*"
+      ],
+      "@server/*": [
+        "server/*"
+      ],
+      "@shared/*": [
+        "shared/*"
+      ],
+      "@lib/*": [
+        "lib/*"
+      ],
+      "@prisma/*": [
+        "prisma/*"
+      ],
+      "@utils/*": [
+        "utils/*"
+      ],
+      "@types/*": [
+        "types/*"
+      ],
+      "#prisma": [
+        "prisma/prisma.ts"
       ]
     },
     "resolveJsonModule": true,
