--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
-    "@sidebase/nuxt-auth": "^1.0.2",
     "@unhead/vue": "^2.0.14",
     "axios": "^1.11.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "mongoose": "^8.18.0",
+    "@sidebase/nuxt-auth": "^1.0.2",
     "next-auth": "^4.21.1",
     "nuxt": "^4.1.0",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
     "telegram": "^2.26.22",
-    "v-gsap-nuxt": "^1.4.4",
     "vue": "^3.5.20",
     "vue-router": "^4.5.1"
   },
@@ -51,7 +50,6 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.4.0",
     "happy-dom": "^18.0.1",
-    "nuxt-svg-sprite-icon": "^2.0.1",
     "playwright-core": "^1.54.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
