--- a/package.json
+++ b/package.json
@@ -18,19 +18,20 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
+    "@sidebase/nuxt-auth": "^1.0.2",
     "@unhead/vue": "^2.0.14",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
     "mongoose": "^8.18.0",
-    "@sidebase/nuxt-auth": "^1.0.2",
     "next-auth": "^4.21.1",
     "nuxt": "^4.1.0",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
     "telegram": "^2.26.22",
     "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@iconify-json/heroicons": "^1.2.2",
