--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "workbench.sideBar.location": "right",
-  "workbench.colorTheme": "JellyFish",
+  "workbench.colorTheme": "Tomorrow Night Blue",
   "workbench.iconTheme": "helium-icon-theme",
   // --- Terminal UI ---
   "terminal.integrated.fontFamily": "CaskaydiaCove Nerd Font",
