--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^12.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "next-auth": "^4.21.1",
     "nuxt": "^4.1.0",
@@ -41,6 +42,7 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
