--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../.nuxt/tsconfig.server.json",
   "compilerOptions": {
+    "moduleResolution": "bundler",
     "types": [
       "@types/node",
       "next-auth",
