--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "next-auth": "^4.21.1",
-    "nuxt": "^4.1.0",
+    "nuxt": "^4.1.1",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
     "telegram": "^2.26.22",
-    "vue": "^3.5.20",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5"
   },
@@ -43,7 +43,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.3.1",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "@vue/test-utils": "^2.4.6",
@@ -59,7 +59,8 @@
     "sass": "^1.90.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
+    "vite": "^7.1.5",
     "vitest": "^3.2.4",
-    "vue-tsc": "^3.0.6"
+    "vue-tsc": "^3.0.7"
   }
 }
