--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,21 +1,3 @@
 {
-  "extends": "../.nuxt/tsconfig.server.json",
-  "compilerOptions": {
-    "moduleResolution": "bundler",
-    "types": [
-      "@types/node",
-      "next-auth",
-      "./types/next-auth"
-    ],
-    "paths": {
-      "#app": [
-        "./node_modules/nuxt/dist/app"
-      ]
-    }
-  },
-  "include": [
-    "types/**/*.d.ts",
-    "server/**/*.ts",
-    "app/**/*.ts"
-  ]
+  "extends": "../.nuxt/tsconfig.server.json"
 }
