--- a/package.json
+++ b/package.json
@@ -10,22 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@auth/core": "^0.34.2",
-    "@nuxt/content": "^3.6.3",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.11.13",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
-    "@sidebase/nuxt-auth": "^1.0.2",
+    "@sidebase/nuxt-auth": "0.7.0",
+    "next-auth": "4.21.1",
     "@unhead/vue": "^2.0.14",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
-    "better-sqlite3": "^12.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
-    "next-auth": "^4.21.1",
     "nuxt": "^4.1.1",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
