--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       ]
     },
     "types": [
-      "node"
+      "node",
+      "next-auth"
     ],
     "typeRoots": [
       "./node_modules/@types",
