Font-Updated, Darkmode Icons replaced

--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
     "@sidebase/nuxt-auth": "0.7.0",
-    "next-auth": "4.21.1",
     "@unhead/vue": "^2.0.14",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
+    "next-auth": "4.21.1",
     "nuxt": "^4.1.1",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
@@ -32,8 +32,12 @@
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@iconify-json/emojione-monotone": "^1.2.1",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/nimbus": "^1.2.1",
+    "@iconify-json/noto": "^1.2.6",
+    "@iconify-json/teenyicons": "^1.2.2",
     "@nuxt/devtools": "^2.6.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
