--- a/package.json
+++ b/package.json
@@ -32,12 +32,36 @@
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
+    "@iconify-json/arcticons": "^1.2.38",
+    "@iconify-json/basil": "^1.2.4",
+    "@iconify-json/bi": "^1.2.6",
+    "@iconify-json/circle-flags": "^1.2.8",
+    "@iconify-json/clarity": "^1.2.4",
     "@iconify-json/emojione-monotone": "^1.2.1",
+    "@iconify-json/file-icons": "^1.2.2",
+    "@iconify-json/fluent": "^1.2.30",
+    "@iconify-json/guidance": "^1.2.2",
     "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/hugeicons": "^1.2.16",
+    "@iconify-json/humbleicons": "^1.2.11",
+    "@iconify-json/ic": "^1.2.4",
+    "@iconify-json/icon-park": "^1.2.4",
+    "@iconify-json/ion": "^1.2.6",
+    "@iconify-json/la": "^1.2.1",
+    "@iconify-json/lineicons": "^1.2.6",
+    "@iconify-json/mage": "^1.2.4",
+    "@iconify-json/material-symbols-light": "^1.2.35",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/nimbus": "^1.2.1",
     "@iconify-json/noto": "^1.2.6",
+    "@iconify-json/oui": "^1.2.6",
+    "@iconify-json/radix-icons": "^1.2.5",
+    "@iconify-json/ri": "^1.2.5",
+    "@iconify-json/solar": "^1.2.4",
+    "@iconify-json/streamline-freehand": "^1.2.1",
     "@iconify-json/teenyicons": "^1.2.2",
+    "@iconify-json/token-branded": "^1.2.27",
+    "@iconify-json/uit": "^1.2.3",
     "@nuxt/devtools": "^2.6.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
