--- a/package.json
+++ b/package.json
@@ -38,14 +38,19 @@
     "@iconify-json/circle-flags": "^1.2.8",
     "@iconify-json/clarity": "^1.2.4",
     "@iconify-json/emojione-monotone": "^1.2.1",
+    "@iconify-json/famicons": "^1.2.2",
     "@iconify-json/file-icons": "^1.2.2",
     "@iconify-json/fluent": "^1.2.30",
+    "@iconify-json/fluent-mdl2": "^1.2.1",
+    "@iconify-json/garden": "^1.2.2",
     "@iconify-json/guidance": "^1.2.2",
     "@iconify-json/heroicons": "^1.2.2",
     "@iconify-json/hugeicons": "^1.2.16",
     "@iconify-json/humbleicons": "^1.2.11",
     "@iconify-json/ic": "^1.2.4",
     "@iconify-json/icon-park": "^1.2.4",
+    "@iconify-json/icon-park-outline": "^1.2.4",
+    "@iconify-json/iconoir": "^1.2.9",
     "@iconify-json/ion": "^1.2.6",
     "@iconify-json/la": "^1.2.1",
     "@iconify-json/lineicons": "^1.2.6",
@@ -55,10 +60,12 @@
     "@iconify-json/nimbus": "^1.2.1",
     "@iconify-json/noto": "^1.2.6",
     "@iconify-json/oui": "^1.2.6",
+    "@iconify-json/ph": "^1.2.2",
     "@iconify-json/radix-icons": "^1.2.5",
     "@iconify-json/ri": "^1.2.5",
     "@iconify-json/solar": "^1.2.4",
     "@iconify-json/streamline-freehand": "^1.2.1",
+    "@iconify-json/tabler": "^1.2.22",
     "@iconify-json/teenyicons": "^1.2.2",
     "@iconify-json/token-branded": "^1.2.27",
     "@iconify-json/uit": "^1.2.3",
