--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@iconify-json/arcticons": "^1.2.38",
     "@iconify-json/basil": "^1.2.4",
     "@iconify-json/bi": "^1.2.6",
+    "@iconify-json/carbon": "^1.2.13",
     "@iconify-json/circle-flags": "^1.2.8",
     "@iconify-json/clarity": "^1.2.4",
     "@iconify-json/emojione-monotone": "^1.2.1",
@@ -92,6 +93,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.9.2",
     "vite": "^7.1.5",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4",
     "vue-tsc": "^3.0.7"
   }
