--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@iconify-json/arcticons": "^1.2.38",
     "@iconify-json/basil": "^1.2.4",
     "@iconify-json/bi": "^1.2.6",
+    "@iconify-json/bitcoin-icons": "^1.2.4",
     "@iconify-json/carbon": "^1.2.13",
     "@iconify-json/circle-flags": "^1.2.8",
     "@iconify-json/clarity": "^1.2.4",
@@ -58,6 +59,7 @@
     "@iconify-json/mage": "^1.2.4",
     "@iconify-json/material-symbols-light": "^1.2.35",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/mi": "^1.2.2",
     "@iconify-json/nimbus": "^1.2.1",
     "@iconify-json/noto": "^1.2.6",
     "@iconify-json/oui": "^1.2.6",
