--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
+    "strict": true,
+    "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "~/*": [
@@ -26,7 +28,8 @@
       ]
     },
     "types": [
-      "node"
+      "node",
+      "echarts"
     ],
     "typeRoots": [
       "./node_modules/@types",
