--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@iconify-json/iconoir": "^1.2.9",
     "@iconify-json/ion": "^1.2.6",
     "@iconify-json/la": "^1.2.1",
+    "@iconify-json/line-md": "^1.2.11",
     "@iconify-json/lineicons": "^1.2.6",
     "@iconify-json/mage": "^1.2.4",
     "@iconify-json/material-symbols-light": "^1.2.35",
