--- a/package.json
+++ b/package.json
@@ -56,13 +56,16 @@
     "@iconify-json/icon-park-outline": "^1.2.4",
     "@iconify-json/iconoir": "^1.2.9",
     "@iconify-json/ion": "^1.2.6",
+    "@iconify-json/iwwa": "^1.2.1",
     "@iconify-json/la": "^1.2.1",
     "@iconify-json/line-md": "^1.2.11",
     "@iconify-json/lineicons": "^1.2.6",
     "@iconify-json/mage": "^1.2.4",
-    "@iconify-json/material-symbols-light": "^1.2.35",
+    "@iconify-json/material-symbols-light": "^1.2.36",
     "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/mdi-light": "^1.2.2",
     "@iconify-json/mi": "^1.2.2",
+    "@iconify-json/mingcute": "^1.2.5",
     "@iconify-json/nimbus": "^1.2.1",
     "@iconify-json/noto": "^1.2.6",
     "@iconify-json/oui": "^1.2.6",
@@ -70,7 +73,10 @@
     "@iconify-json/radix-icons": "^1.2.5",
     "@iconify-json/ri": "^1.2.5",
     "@iconify-json/solar": "^1.2.4",
+    "@iconify-json/stash": "^1.2.4",
     "@iconify-json/streamline-freehand": "^1.2.1",
+    "@iconify-json/streamline-sharp": "^1.2.0",
+    "@iconify-json/streamline-ultimate": "^1.2.2",
     "@iconify-json/tabler": "^1.2.22",
     "@iconify-json/teenyicons": "^1.2.2",
     "@iconify-json/token-branded": "^1.2.27",
