--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "telegram": "^2.26.22",
     "vue": "^3.5.21",
     "vue-echarts": "^7.0.3",
+    "vue-final-modal": "^4.5.5",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5"
   },
