--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
+    "@primeuix/themes": "^1.2.3",
     "@sidebase/nuxt-auth": "0.7.0",
     "@unhead/vue": "^2.0.14",
     "axios": "^1.11.0",
@@ -27,6 +28,7 @@
     "nuxt": "^4.1.1",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
+    "primevue": "^4.3.9",
     "telegram": "^2.26.22",
     "vue": "^3.5.21",
     "vue-echarts": "^7.0.3",
@@ -85,6 +87,7 @@
     "@nuxt/devtools": "^2.6.3",
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
+    "@primevue/nuxt-module": "^4.3.9",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
