--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nuxt": "^4.1.1",
     "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "telegram": "^2.26.22",
     "vue": "^3.5.21",
