--- a/package.json
+++ b/package.json
@@ -16,18 +16,17 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
-    "@tiptap/pm": "^3.4.4",
-    "@tiptap/starter-kit": "^3.4.4",
-    "@tiptap/vue-3": "^3.4.4",
     "@unhead/vue": "^2.0.14",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "drizzle-orm": "^0.44.5",
     "echarts": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "next-auth": "4.21.1",
     "nuxt": "^4.1.1",
-    "nuxt-tiptap-editor": "^2.3.1",
     "openai": "^5.19.1",
+    "pg": "^8.16.3",
     "telegram": "^2.26.22",
     "vue": "^3.5.21",
     "vue-echarts": "^7.0.3",
@@ -91,6 +90,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
+    "@types/pg": "^8.15.5",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
     "@typescript-eslint/parser": "^8.40.0",
     "@vue/test-utils": "^2.4.6",
