--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.5",
     "echarts": "^5.6.0",
+    "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "next-auth": "4.21.1",
     "nuxt": "^4.1.1",
