nuxt, drizzle configs updated

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     },
     "types": [
       "node",
-      "echarts"
+      "echarts",
     ],
     "typeRoots": [
       "./node_modules/@types",
