--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@typescript-eslint/parser": "^8.40.0",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.34.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
