drizzle.config.ts migrate path changed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,10 @@
     "baseUrl": ".",
     "paths": {
       "~/*": [
-        "./*"
+        "./app/*"
       ],
       "@/*": [
         "./app/*"
-      ],
-      "@@/*": [
-        "./*"
       ],
       "~/server/*": [
         "./server/*"
