--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "db:generate": "drizzle kit generate:pg",
+    "db:migrate": "drizzle-kit migrate:pg"
   },
   "dependencies": {
     "@nuxt/icon": "^2.0.0",
