db migration done and default superadmin created

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     },
     "types": [
       "node",
-      "echarts"
+      "echarts",
     ],
     "typeRoots": [
       "./node_modules/@types",
