--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "db:generate": "drizzle kit generate:pg --out ./server/db/drizzle",
-    "db:migrate": "drizzle-kit migrate:pg",
-    "db:seed": "ts-node ./server/utils/seedSuperAdmin.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:seed": "tsx ./server/scripts/seed.ts",
     "db:reset-users": "ts-node ./server/scripts/resetUsers.ts"
   },
   "dependencies": {
@@ -24,6 +24,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
     "echarts": "^5.6.0",
     "jose": "^6.1.0",
@@ -111,6 +112,9 @@
     "prettier": "^3.6.2",
     "sass": "^1.90.0",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vite": "^7.1.5",
     "vite-tsconfig-paths": "^5.1.4",
