--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,11 @@
     "app/**/*.vue",
     "components/**/*.vue",
     "server/**/*.ts",
-    "types/**/*.ts"
+    "types/**/*.ts",
+    "app",
+    "server",
+    ".nuxt",
+    "nuxt.config.ts"
   ],
   "exclude": [
     "node_modules",
