--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     ],
     "typeRoots": [
       "./node_modules/@types",
-      "./types"
+      "./types",
+      "./types/auto-imports.d.ts"
     ]
   },
   "include": [
@@ -41,12 +42,12 @@
     "app",
     "server",
     ".nuxt",
-    "nuxt.config.ts"
+    "nuxt.config.ts",
+    ".nuxt/imports.d.ts",
   ],
   "exclude": [
     "node_modules",
     "dist",
-    ".nuxt",
     "output"
   ]
 }
