--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nuxt": "^4.1.1",
     "openai": "^5.19.1",
     "pg": "^8.16.3",
+    "quill": "^2.0.3",
     "telegram": "^2.26.22",
     "vue": "^3.5.21",
     "vue-echarts": "^7.0.3",
