--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.5",
+    "drizzle-zod": "^0.8.3",
     "echarts": "^5.6.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -35,11 +36,13 @@
     "pg": "^8.16.3",
     "quill": "^2.0.3",
     "telegram": "^2.26.22",
+    "uuid": "^13.0.0",
     "vue": "^3.5.21",
     "vue-echarts": "^7.0.3",
     "vue-final-modal": "^4.5.5",
     "vue-router": "^4.5.1",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@iconify-json/arcticons": "^1.2.38",
