--- a/package.json
+++ b/package.json
@@ -14,12 +14,37 @@
     "db:reset-users": "ts-node ./server/scripts/resetUsers.ts"
   },
   "dependencies": {
+    "@iconify/vue": "^5.0.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/scripts": "^0.11.13",
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
+    "@tiptap/extension-bubble-menu": "^3.6.1",
+    "@tiptap/extension-character-count": "^3.6.1",
+    "@tiptap/extension-code-block-lowlight": "^3.6.1",
+    "@tiptap/extension-color": "^3.6.1",
+    "@tiptap/extension-floating-menu": "^3.6.1",
+    "@tiptap/extension-font-family": "^3.6.1",
+    "@tiptap/extension-heading": "^3.6.1",
+    "@tiptap/extension-highlight": "^3.6.1",
+    "@tiptap/extension-image": "^3.6.1",
+    "@tiptap/extension-link": "^3.6.1",
+    "@tiptap/extension-subscript": "^3.6.1",
+    "@tiptap/extension-superscript": "^3.6.1",
+    "@tiptap/extension-table": "^3.6.1",
+    "@tiptap/extension-table-cell": "^3.6.1",
+    "@tiptap/extension-table-header": "^3.6.1",
+    "@tiptap/extension-table-row": "^3.6.1",
+    "@tiptap/extension-task-item": "^3.6.1",
+    "@tiptap/extension-task-list": "^3.6.1",
+    "@tiptap/extension-text-style": "^3.6.1",
+    "@tiptap/extension-typography": "^3.6.2",
+    "@tiptap/extension-underline": "^3.6.1",
+    "@tiptap/extension-youtube": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.1",
+    "@tiptap/vue-3": "^3.6.1",
     "@unhead/vue": "^2.0.14",
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.11.0",
@@ -30,10 +55,12 @@
     "echarts": "^5.6.0",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lowlight": "^3.3.0",
     "next-auth": "4.21.1",
     "nuxt": "^4.1.1",
     "openai": "^5.19.1",
     "pg": "^8.16.3",
+    "pinia": "^3.0.3",
     "quill": "^2.0.3",
     "telegram": "^2.26.22",
     "uuid": "^13.0.0",
@@ -96,9 +123,10 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tiptap/extension-placeholder": "^3.4.4",
+    "@tiptap/extension-placeholder": "^3.6.1",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/lowlight": "^0.0.7",
     "@types/node": "^24.3.1",
     "@types/pg": "^8.15.5",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
