--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "vue-final-modal": "^4.5.5",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue-tooltip": "^0.1.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
