--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
+    "@tiptap/extension-blockquote": "^3.6.2",
     "@tiptap/extension-bubble-menu": "^3.6.1",
     "@tiptap/extension-character-count": "^3.6.1",
     "@tiptap/extension-code-block-lowlight": "^3.6.1",
@@ -33,10 +34,6 @@
     "@tiptap/extension-link": "^3.6.1",
     "@tiptap/extension-subscript": "^3.6.1",
     "@tiptap/extension-superscript": "^3.6.1",
-    "@tiptap/extension-table": "^3.6.1",
-    "@tiptap/extension-table-cell": "^3.6.1",
-    "@tiptap/extension-table-header": "^3.6.1",
-    "@tiptap/extension-table-row": "^3.6.1",
     "@tiptap/extension-task-item": "^3.6.1",
     "@tiptap/extension-task-list": "^3.6.1",
     "@tiptap/extension-text-style": "^3.6.1",
@@ -52,22 +49,20 @@
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
     "echarts": "^5.6.0",
+    "floating-vue": "^5.2.2",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "lowlight": "^3.3.0",
     "next-auth": "4.21.1",
     "nuxt": "^4.1.1",
-    "openai": "^5.19.1",
     "pg": "^8.16.3",
     "pinia": "^3.0.3",
-    "telegram": "^2.26.22",
     "uuid": "^13.0.0",
     "vue": "^3.5.21",
     "vue-echarts": "^7.0.3",
     "vue-final-modal": "^4.5.5",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5",
-    "vue-tooltip": "^0.1.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
