--- a/package.json
+++ b/package.json
@@ -26,16 +26,20 @@
     "@tiptap/extension-character-count": "^3.6.1",
     "@tiptap/extension-code-block-lowlight": "^3.6.1",
     "@tiptap/extension-color": "^3.6.1",
+    "@tiptap/extension-document": "^3.6.2",
     "@tiptap/extension-floating-menu": "^3.6.1",
     "@tiptap/extension-font-family": "^3.6.1",
     "@tiptap/extension-heading": "^3.6.1",
     "@tiptap/extension-highlight": "^3.6.1",
+    "@tiptap/extension-history": "^3.6.2",
+    "@tiptap/extension-horizontal-rule": "^3.6.2",
     "@tiptap/extension-image": "^3.6.1",
     "@tiptap/extension-link": "^3.6.1",
     "@tiptap/extension-subscript": "^3.6.1",
     "@tiptap/extension-superscript": "^3.6.1",
     "@tiptap/extension-task-item": "^3.6.1",
     "@tiptap/extension-task-list": "^3.6.1",
+    "@tiptap/extension-text": "^3.6.2",
     "@tiptap/extension-text-style": "^3.6.1",
     "@tiptap/extension-typography": "^3.6.2",
     "@tiptap/extension-underline": "^3.6.1",
@@ -73,6 +77,7 @@
     "@iconify-json/carbon": "^1.2.13",
     "@iconify-json/circle-flags": "^1.2.8",
     "@iconify-json/clarity": "^1.2.4",
+    "@iconify-json/codicon": "^1.2.30",
     "@iconify-json/emojione-monotone": "^1.2.1",
     "@iconify-json/famicons": "^1.2.2",
     "@iconify-json/file-icons": "^1.2.2",
