--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,7 +47,7 @@
   "vue.trace.server": "messages",
   "vue.autoInsert.dotValue": true,
   "[vue]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.defaultFormatter": "vscode.typescript-language-features",
     "editor.codeActionsOnSave": {
       "source.fixAll": "explicit",
       "source.fixAll.eslint": "explicit",
