--- a/package.json
+++ b/package.json
@@ -21,46 +21,38 @@
     "@nuxt/test-utils": "^3.19.2",
     "@nuxtjs/mdc": "^0.17.2",
     "@pinia/nuxt": "^0.11.2",
-    "@tiptap/extension-blockquote": "^3.6.2",
-    "@tiptap/extension-bubble-menu": "^3.6.1",
-    "@tiptap/extension-character-count": "^3.6.1",
-    "@tiptap/extension-code-block-lowlight": "^3.6.1",
-    "@tiptap/extension-color": "^3.6.1",
-    "@tiptap/extension-document": "^3.6.2",
-    "@tiptap/extension-floating-menu": "^3.6.1",
-    "@tiptap/extension-font-family": "^3.6.1",
-    "@tiptap/extension-heading": "^3.6.1",
-    "@tiptap/extension-highlight": "^3.6.1",
-    "@tiptap/extension-history": "^3.6.2",
-    "@tiptap/extension-horizontal-rule": "^3.6.2",
-    "@tiptap/extension-image": "^3.6.1",
-    "@tiptap/extension-link": "^3.6.1",
-    "@tiptap/extension-subscript": "^3.6.1",
-    "@tiptap/extension-superscript": "^3.6.1",
-    "@tiptap/extension-task-item": "^3.6.1",
-    "@tiptap/extension-task-list": "^3.6.1",
-    "@tiptap/extension-text": "^3.6.2",
-    "@tiptap/extension-text-style": "^3.6.1",
-    "@tiptap/extension-typography": "^3.6.2",
-    "@tiptap/extension-underline": "^3.6.1",
+    "@tinymce/tinymce-vue": "^6.3.0",
+    "@tiptap/extension-character-count": "^3.6.2",
+    "@tiptap/extension-font-family": "^3.6.2",
+    "@tiptap/extension-highlight": "^3.6.2",
+    "@tiptap/extension-image": "^3.6.2",
+    "@tiptap/extension-link": "^3.6.2",
+    "@tiptap/extension-placeholder": "^3.6.2",
+    "@tiptap/extension-task-item": "^3.6.2",
+    "@tiptap/extension-task-list": "^3.6.2",
+    "@tiptap/extension-text-style": "^3.6.2",
     "@tiptap/extension-youtube": "^3.6.2",
-    "@tiptap/starter-kit": "^3.6.1",
-    "@tiptap/vue-3": "^3.6.1",
+    "@tiptap/pm": "^3.6.2",
+    "@tiptap/starter-kit": "^3.6.2",
+    "@tiptap/vue-3": "^3.6.2",
     "@unhead/vue": "^2.0.14",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
+    "dragon-editor": "^3.7.1",
     "drizzle-orm": "^0.44.5",
     "drizzle-zod": "^0.8.3",
     "echarts": "^5.6.0",
+    "echo-editor": "^0.5.0",
     "floating-vue": "^5.2.2",
     "jose": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
-    "lowlight": "^3.3.0",
-    "next-auth": "4.21.1",
-    "nuxt": "^4.1.1",
+    "nuxt": "^4.1.2",
+    "nuxt-tiptap-editor": "^2.3.1",
     "pg": "^8.16.3",
     "pinia": "^3.0.3",
+    "tinymce": "^8.1.2",
+    "uploadcare-widget": "^3.23.3",
     "uuid": "^13.0.0",
     "vue": "^3.5.21",
     "vue-echarts": "^7.0.3",
@@ -122,10 +114,8 @@
     "@nuxtjs/color-mode": "^3.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@tailwindcss/line-clamp": "^0.4.4",
-    "@tiptap/extension-placeholder": "^3.6.1",
     "@types/bcrypt": "^6.0.0",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/lowlight": "^0.0.7",
     "@types/node": "^24.3.1",
     "@types/pg": "^8.15.5",
     "@typescript-eslint/eslint-plugin": "^8.40.0",
@@ -141,7 +131,7 @@
     "playwright-core": "^1.54.2",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
-    "sass": "^1.90.0",
+    "sass": "^1.93.2",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
