--- a/package.json
+++ b/package.json
@@ -14,6 +14,25 @@
     "db:reset-users": "ts-node ./server/scripts/resetUsers.ts"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^47.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^47.0.0",
+    "@ckeditor/ckeditor5-code-block": "^47.0.0",
+    "@ckeditor/ckeditor5-core": "^47.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^47.0.0",
+    "@ckeditor/ckeditor5-essentials": "^47.0.0",
+    "@ckeditor/ckeditor5-font": "^47.0.0",
+    "@ckeditor/ckeditor5-heading": "^47.0.0",
+    "@ckeditor/ckeditor5-highlight": "^47.0.0",
+    "@ckeditor/ckeditor5-horizontal-line": "^47.0.0",
+    "@ckeditor/ckeditor5-image": "^47.0.0",
+    "@ckeditor/ckeditor5-link": "^47.0.0",
+    "@ckeditor/ckeditor5-list": "^47.0.0",
+    "@ckeditor/ckeditor5-media-embed": "^47.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^47.0.0",
+    "@ckeditor/ckeditor5-remove-format": "^47.0.0",
+    "@ckeditor/ckeditor5-source-editing": "^47.0.0",
+    "@ckeditor/ckeditor5-table": "^47.0.0",
+    "@ckeditor/ckeditor5-vue": "^7.3.0",
     "@iconify/vue": "^5.0.0",
     "@nuxt/icon": "^2.0.0",
     "@nuxt/image": "^1.11.0",
@@ -36,6 +55,7 @@
     "@tiptap/starter-kit": "^3.6.2",
     "@tiptap/vue-3": "^3.6.2",
     "@unhead/vue": "^2.0.14",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.2",
