--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@iconify-json/circle-flags": "^1.2.8",
     "@iconify-json/clarity": "^1.2.4",
     "@iconify-json/codicon": "^1.2.30",
+    "@iconify-json/ei": "^1.2.2",
     "@iconify-json/emojione-monotone": "^1.2.1",
     "@iconify-json/famicons": "^1.2.2",
     "@iconify-json/file-icons": "^1.2.2",
