--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "@iconify-json/basil": "^1.2.4",
     "@iconify-json/bi": "^1.2.6",
     "@iconify-json/bitcoin-icons": "^1.2.4",
+    "@iconify-json/bytesize": "^1.2.2",
     "@iconify-json/carbon": "^1.2.13",
     "@iconify-json/circle-flags": "^1.2.8",
     "@iconify-json/clarity": "^1.2.4",
@@ -127,6 +128,7 @@
     "@iconify-json/streamline-freehand": "^1.2.1",
     "@iconify-json/streamline-sharp": "^1.2.0",
     "@iconify-json/streamline-ultimate": "^1.2.2",
+    "@iconify-json/subway": "^1.2.0",
     "@iconify-json/tabler": "^1.2.22",
     "@iconify-json/teenyicons": "^1.2.2",
     "@iconify-json/token-branded": "^1.2.27",
